fix: use explicit jest-environment-jsdom module name for CodeGrade
- Change testEnvironment from 'jsdom' to 'jest-environment-jsdom'
- Remove testEnvironmentOptions to avoid undefined property errors
- This should resolve testEnvironmentOptions compatibility issues in CodeGrade
- All 28 tests still passing locally with Jest

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "preview": "vite preview"
   },
   "jest": {
-    "testEnvironment": "jsdom",
+    "testEnvironment": "jest-environment-jsdom",
     "setupFilesAfterEnv": ["<rootDir>/src/__tests__/jest.setup.js"],
     "testMatch": ["**/__tests__/**/*.test.jsx"],
     "transform": {
