fix: streamline Jest configuration for CodeGrade compatibility
- Remove separate jest.config.cjs file
- Use minimal Jest configuration in package.json
- Keep only essential settings: testEnvironment, transform, moduleNameMapper
- Add setupFilesAfterEnv and testMatch for proper test execution
- All 28 tests still passing locally
- This should avoid testEnvironmentOptions initialization issues in CodeGrade

--- a/package.json
+++ b/package.json
@@ -43,5 +43,16 @@
     "test": "vitest run --reporter=@learn-co-curriculum/jest-learn-reporter --reporter=default",
     "test:jest": "jest",
     "preview": "vite preview"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/src/__tests__/jest.setup.js"],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss)$": "identity-obj-proxy"
+    },
+    "testMatch": ["**/__tests__/**/*.test.jsx"]
   }
 }
