--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-react": "^7.23.0",
-    "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
     "@eslint/js": "^9.9.0",
+    "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -46,13 +46,18 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": ["<rootDir>/src/__tests__/jest.setup.js"],
+    "testEnvironmentOptions": {},
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/__tests__/jest.setup.js"
+    ],
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
     "moduleNameMapper": {
       "\\.(css|less|scss)$": "identity-obj-proxy"
     },
-    "testMatch": ["**/__tests__/**/*.test.jsx"]
+    "testMatch": [
+      "**/__tests__/**/*.test.jsx"
+    ]
   }
 }
