Fix Jest configuration and test compatibility
- Fix Jest testEnvironmentOptions configuration in package.json
- Revert test files to use jest instead of vi for remote environment
- Add proper Jest fetch mocking in jest.setup.js with beforeEach
- Ensure tests work in both local (vitest) and remote (jest) environments

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "testEnvironmentOptions": {},
+    "testEnvironmentOptions": {
+      "url": "http://localhost:3000"
+    },
     "setupFilesAfterEnv": [
       "<rootDir>/src/__tests__/jest.setup.js"
     ],
