--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "globals": "^15.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^25.0.0",
     "json-server": "^1.0.0-beta.2",
     "vite": "^5.4.1",
@@ -45,6 +46,17 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "transform": {}
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/__tests__/jest.setup.js"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss)$": "identity-obj-proxy"
+    },
+    "testMatch": [
+      "**/__tests__/**/*.test.jsx"
+    ]
   }
 }
